--- a/PointOfSale/OrderControl.xaml
+++ b/PointOfSale/OrderControl.xaml
@@ -5,14 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="800">
+             d:DesignHeight="1080" d:DesignWidth="1920">
 
     <UserControl.Resources>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="18"/>
             <Setter Property="Height" Value="50"/>
         </Style>
-        
+
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="30"/>
             <Setter Property="Height" Value="60"/>
@@ -24,10 +24,19 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Button Name="ItemSelectionButton" Grid.Column="0" FontWeight="Bold" Click="ItemSelectionButton_Click">Item Selection</Button>
-        <Button Name="CancelOrderButton" Grid.Column="1" FontWeight="Bold" Click="CancelOrderButton_Click">Cancel Order</Button>
-        <Button Name="CompleteOrderButton" Grid.Column="2" FontWeight="Bold" Click="CompleteOrderButton_Click"> Complete Order</Button>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="25*"/>
+        </Grid.RowDefinitions>
+
+        <Button Name="ItemSelectionButton" Grid.Column="0" Grid.Row="0" FontWeight="Bold" Click="ItemSelectionButton_Click">Item Selection</Button>
+        <Button Name="CancelOrderButton" Grid.Row="0" Grid.Column="1" FontWeight="Bold" Click="CancelOrderButton_Click">Cancel Order</Button>
+        <Button Name="CompleteOrderButton" Grid.Row="0" Grid.Column="2" FontWeight="Bold" Click="CompleteOrderButton_Click">Complete Order</Button>
+
+        <local:OrderSummaryControl Grid.Column="3" Grid.RowSpan="2"/>
+        <local:MenuItemSelectionControl Grid.Row="1" Grid.ColumnSpan="3"/>
     </Grid>
 </UserControl>
