--- a/PointOfSale/OrderSummaryControl.xaml
+++ b/PointOfSale/OrderSummaryControl.xaml
@@ -27,23 +27,23 @@
         <TextBlock Grid.Row="1" Grid.Column="0" Background="LightSteelBlue" FontSize="20" Text="{Binding Path=OrderNumber}"/>
         <TextBlock Grid.Row="0" Grid.Column="1" Background="LightSteelBlue"/>
         <TextBlock Grid.Row="1" Grid.Column="1" Background="LightSteelBlue"/>
-        <StackPanel Grid.Row="2" Grid.Column="0">
-            <ListBox Name="OrderDisplay" ItemsSource="{Binding Path=Items}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition Width="25"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="{Binding}"/>
-                            <TextBlock x:Name="PriceDisplay" Grid.Column="1" FontSize="16" Text="{Binding Path=Price}"/>
-                            <Button Name="RemoveItemButton" Grid.Column="1" Click="RemoveItemButton_Click">X</Button>
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </StackPanel>
+
+        <ListBox Name="OrderDisplay" ItemsSource="{Binding Path=Items}" Grid.Row="2" Grid.ColumnSpan="2">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="25"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="{Binding}"/>
+                        <TextBlock Grid.Column="1" TextAlignment="Right" FontSize="16" Text="{Binding Path=Price, StringFormat=c}"/>
+                        <Button Name="RemoveItemButton" Grid.Column="2" Click="RemoveItemButton_Click">X</Button>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
         <TextBlock Grid.Row="3" Grid.Column="0" FontSize="30" Background="Gray" >Subtotal</TextBlock>
         <TextBlock Grid.Row="3" Grid.Column="1" FontSize="30" Background="Gray" Text="{Binding Path=Subtotal, StringFormat=c}"/>
