--- a/PointOfSale/OrderSummaryControl.xaml
+++ b/PointOfSale/OrderSummaryControl.xaml
@@ -26,7 +26,7 @@
         <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Background="LightSteelBlue" FontSize="40" FontWeight="Bold" Text="Order"/>
         <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Background="LightSteelBlue" FontSize="20" Text="{Binding Path=OrderNumber}"/>
 
-        <ListBox Name="OrderDisplay" ItemsSource="{Binding Path=Items}" Grid.Row="2" Grid.ColumnSpan="2">
+        <ListBox Name="OrderDisplay" ItemsSource="{Binding Path=Items}" Grid.Row="2" Grid.ColumnSpan="2" SelectionChanged="OrderDisplayClick">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
