--- a/PointOfSale/CustomizeMenus/Drink/CustomizeJerkedSoda.xaml
+++ b/PointOfSale/CustomizeMenus/Drink/CustomizeJerkedSoda.xaml
@@ -6,9 +6,21 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="RadioButton">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+
     <Grid>
         <StackPanel>
-            <TextBlock Text="Customize Jerked Soda" FontSize="30"/>
+            <TextBlock Text="Customize Jerked Soda" FontSize="50"/>
             <CheckBox IsChecked="{Binding Path=Ice}">Ice</CheckBox>
             <RadioButton Name="CreamSodaRadioButton" Tag="Cream Soda" Click="FlavorRadioButtonClick" IsChecked="True">Cream Soda</RadioButton>
             <RadioButton Name="OrangeSodaRadioButton" Tag="Orange Soda" Click="FlavorRadioButtonClick">Orange Soda</RadioButton>
@@ -17,9 +29,9 @@
             <RadioButton Name="RootBeerRadioButton" Tag="Root Beer" Click="FlavorRadioButtonClick">Root Beer</RadioButton>
             <GroupBox Header="Size" FontSize="20">
                 <StackPanel>
-                    <RadioButton Tag="Small" Click="RadioButtonClick" FontSize="12" IsChecked="True">Small</RadioButton>
-                    <RadioButton Tag="Medium" Click="RadioButtonClick" FontSize="12">Medium</RadioButton>
-                    <RadioButton Tag="Large" Click="RadioButtonClick" FontSize="12">Large</RadioButton>
+                    <RadioButton Tag="Small" Click="RadioButtonClick" IsChecked="True">Small</RadioButton>
+                    <RadioButton Tag="Medium" Click="RadioButtonClick">Medium</RadioButton>
+                    <RadioButton Tag="Large" Click="RadioButtonClick">Large</RadioButton>
                 </StackPanel>
             </GroupBox>
 
