--- a/PointOfSale/CustomizeMenus/Drink/CustomizeTexasTea.xaml
+++ b/PointOfSale/CustomizeMenus/Drink/CustomizeTexasTea.xaml
@@ -6,17 +6,29 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="RadioButton">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+
     <Grid>
         <StackPanel>
-            <TextBlock Text="Customize Texas Tea" FontSize="30"/>
+            <TextBlock Text="Customize Texas Tea" FontSize="50"/>
             <CheckBox IsChecked="{Binding Path=Ice}">Ice</CheckBox>
             <CheckBox IsChecked="{Binding Path=Sweet}">Sweet</CheckBox>
             <CheckBox IsChecked="{Binding Path=Lemon}">Lemon</CheckBox>
             <GroupBox Header="Size" FontSize="20">
                 <StackPanel>
-                    <RadioButton Tag="Small" Click="RadioButtonClick" FontSize="12" IsChecked="True">Small</RadioButton>
-                    <RadioButton Tag="Medium" Click="RadioButtonClick" FontSize="12">Medium</RadioButton>
-                    <RadioButton Tag="Large" Click="RadioButtonClick" FontSize="12" >Large</RadioButton>
+                    <RadioButton Tag="Small" Click="RadioButtonClick" IsChecked="True">Small</RadioButton>
+                    <RadioButton Tag="Medium" Click="RadioButtonClick">Medium</RadioButton>
+                    <RadioButton Tag="Large" Click="RadioButtonClick" >Large</RadioButton>
                 </StackPanel>
             </GroupBox>
         </StackPanel>
