--- a/PointOfSale/CustomizeMenus/Entree/CustomizeAngryChicken.xaml
+++ b/PointOfSale/CustomizeMenus/Entree/CustomizeAngryChicken.xaml
@@ -6,9 +6,17 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+
     <Grid>
         <StackPanel>
-            <TextBlock Text="Customize Angry Chicken" FontSize="30"/>
+            <TextBlock Text="Customize Angry Chicken" FontSize="50"/>
             <CheckBox IsChecked="{Binding Path=Bread}">Bread</CheckBox>
             <CheckBox IsChecked="{Binding Path=Pickle}">Pickle</CheckBox>
         </StackPanel>
