--- a/PointOfSale/CustomizeMenus/Entree/CustomizeCowpokeChili.xaml
+++ b/PointOfSale/CustomizeMenus/Entree/CustomizeCowpokeChili.xaml
@@ -6,10 +6,17 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
 
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+
+    <Grid>
         <StackPanel>
-            <TextBlock Text="Customize Cowpoke Chili" FontSize="30"/>
+            <TextBlock Text="Customize Cowpoke Chili" FontSize="50"/>
             <CheckBox IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
             <CheckBox IsChecked="{Binding Path=GreenOnions}">Green Onions</CheckBox>
             <CheckBox IsChecked="{Binding Path=SourCream}">Sour Cream</CheckBox>
