--- a/PointOfSale/CustomizeMenus/Entree/CustomizeDakotaDoubleBurger.xaml
+++ b/PointOfSale/CustomizeMenus/Entree/CustomizeDakotaDoubleBurger.xaml
@@ -6,9 +6,17 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+
     <Grid>
         <StackPanel>
-            <TextBlock Text="Customize Dakota Double Burger" FontSize="30"/>
+            <TextBlock Text="Customize Dakota Double Burger" FontSize="50"/>
             <CheckBox IsChecked="{Binding Path=Bun}">Bun</CheckBox>
             <CheckBox IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
             <CheckBox IsChecked="{Binding Path=Lettuce}">Lettuce</CheckBox>
