--- a/PointOfSale/CustomizeMenus/Drink/CustomizeJerkedSoda.xaml
+++ b/PointOfSale/CustomizeMenus/Drink/CustomizeJerkedSoda.xaml
@@ -29,9 +29,9 @@
             <RadioButton Name="RootBeerRadioButton" Tag="Root Beer" Click="FlavorRadioButtonClick">Root Beer</RadioButton>
             <GroupBox Header="Size" FontSize="20">
                 <StackPanel>
-                    <RadioButton Tag="Small" Click="RadioButtonClick" IsChecked="True">Small</RadioButton>
-                    <RadioButton Tag="Medium" Click="RadioButtonClick">Medium</RadioButton>
-                    <RadioButton Tag="Large" Click="RadioButtonClick">Large</RadioButton>
+                    <RadioButton Tag="Small" Click="RadioButtonClick" IsChecked="{Binding Path=IsSmall}">Small</RadioButton>
+                    <RadioButton Tag="Medium" Click="RadioButtonClick" IsChecked="{Binding Path=IsMedium}">Medium</RadioButton>
+                    <RadioButton Tag="Large" Click="RadioButtonClick" IsChecked="{Binding Path=IsLarge}">Large</RadioButton>
                 </StackPanel>
             </GroupBox>
 
