--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
     <Grid>
-        <local:OrderControl/>
+        <Border x:Name="MainContainer">
+            <local:OrderControl/>
+        </Border>
     </Grid>
 </Window>
