--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -70,19 +70,23 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-#BB-container {
+BB-container {
     display:flex;
     align-items: center;
     justify-content: center;
 }
 
-#BB-container>img{
+BB-container>img {
     max-width: 50%;
     border: 2px solid black;
 }
 
-#errorMsg-container {
+errorMsg-container {
     display: flex;
     align-content: center;
     justify-content: center;
+}
+
+menu-item {
+    border-bottom: 1px solid darkgray;
 }
